--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,189 @@
 body {
-  background-color: #373a40;
-  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+/* Navigation bar propeties */
+.mainNavBar {
+  background-color: #3e0404;
+}
+
+.mainNavBar .navbar-brand {
+  font-family: "Onest", sans-serif;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+.nav-item a {
+  color: #f6f6f6;
+  font-family: "Rubik", sans-serif;
+}
+.nav-item a:hover,
+.nav-item a:focus {
+  color: #ffb300;
+}
+.navbar-brand {
+  color: #ffb300;
+  font-weight: 400;
+  font-size: 1.4rem;
+}
+
+.navbar-toggler {
+  background-color: #ffb300;
+}
+
+.searchBtn {
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.searchBtn:hover {
+  background-color: #ffb300;
+  border-color: #ffb300;
+  color: black;
+}
+
+.form-control {
+  border: 0;
+}
+
+/* Navigation bar propeties */
+
+.header {
+  padding-top: 60px;
+  background: rgb(63, 9, 9);
+  background: linear-gradient(
+    180deg,
+    rgba(63, 9, 9, 1) 0%,
+    rgba(50, 6, 6, 1) 23%,
+    rgba(48, 6, 6, 1) 46%,
+    rgba(40, 8, 8, 1) 63%,
+    rgba(35, 9, 9, 1) 82%,
+    rgba(28, 10, 10, 1) 100%
+  );
+}
+
+.headerDetails {
+  color: #f6f6f6;
+}
+
+h1 {
+  font-family: "Onest", sans-serif;
+  font-weight: 700;
+  font-size: 3rem;
+  color: #ffb300;
+}
+p {
+  font-family: "Rubik", sans-serif;
+}
+
+.orderBtn {
+  background-color: #ffb300;
+  font-size: 1rem;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  border-radius: 20px;
+  padding: 0.8rem 1.5rem;
+  border: none;
+  transition: background-color 500ms, color 500ms;
+}
+
+.orderBtn:hover {
+  background-color: #f44313;
+  color: #f6f6f6;
+}
+
+.burugerDetails {
+  line-height: 2;
+}
+
+.burgerImage {
+  -webkit-filter: drop-shadow(0px 45px 48px #ffffff33);
+  filter: drop-shadow(0px 34px 56px #ffffff34);
+  margin-left: 23px;
+}
+
+.memories{
   height: 100vh;
-  align-items: center;
-  justify-content: center;
+}
+.memories p {
+  color: #f6f6f6;
 }
 
-button {
-  background: none;
-  color: #eeeeee;
-  padding: 13px;
-  border: 2px solid #DC5F00;
-  border-radius: 9px;
-  transition: all 0.5s;
+.imageTwo {
+  height: 550px;
+  width: 550px;
 }
 
-button:hover {
-  background-color: #dc5f00;
-  cursor: pointer;
-  border: 2px solid #eeeeee;
-  transform: translateY(-0.2rem);
-  box-shadow: 0px 0px 9px 0px #fee546;
+.memoryImage .imageTwo {
+  border-radius: 100% 0% 0% 100% / 100% 100% 100% 100%;
+  transition: 1s ease;
+}
+
+.memoryDetials p {
+  line-height: 2;
+}
+
+.telephone {
+  padding-left: 20px;
+  width: 60px;
+  height: 40px;
+  color: white;
+}
+
+.phoneNumber {
+  color: #f6f6f6;
+  font-size: 1.3rem;
+}
+
+.imageTwo:hover {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+  transition: 1s ease;
+}
+
+@media (max-width: 582px) {
+  .headerDetails h1 {
+    font-family: "Onest", sans-serif;
+    font-weight: 600;
+    font-size: 2.4rem;
+    padding-top: 23px;
+    color: #ffb300;
+  }
+  .headerDetails .orderBtn {
+    padding: 0.6rem 1.3rem;
+    border: none;
+    transition: background-color 500ms, color 200ms;
+  }
+}
+
+@media (max-width: 999px) {
+  .header {
+    height: auto;
+  }
+  .burgerImage {
+    -webkit-filter: drop-shadow(0px 45px 48px #ffffff33);
+    filter: drop-shadow(0px 24px 76px #ffffff34);
+    margin-left: 0px;
+  }
+}
+
+@media (max-width: 1001px) {
+  .memories{
+    height: auto;
+  }
+  .memoryImage .imageTwo {
+    padding-bottom: 20px;
+    border-radius: 50px;
+    max-width: 100%;
+    height: auto;
+    transition: none;
+    
+  }
+  .memories h1{
+    padding-top: 30px;
+    font-size: 2rem;
+    text-align: center;
+  }
 }
